--- a/ARS.html
+++ b/ARS.html
@@ -104,7 +104,7 @@ border: 1px solid #333;
 box-shadow: 12px 13px 0px rgba(204, 211, 51, 0.38),
 -11px -14px 0px rgba(241, 96, 0, 0.28),
 18px -24px 0px rgba(0, 0, 0, 0.34),
-33px -6px 0px rgba(39, 74, 214, 0.28);
+33px -6px 0px rgba(39, 74, 214, 0.28);}
 
 </style>
 
